--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 #spring.datasource.url=jdbc:postgresql://localhost:5432/lego-webshop-dev
-spring.datasource.url=jdbc:mysql://gwmyi3gvp7y105sr:wzpw5l8jbwxam0yx@spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/hsd53j8z73cghzmy
+spring.datasource.url=jdbc:mysql://gwmyi3gvp7y105sr:wzpw5l8jbwxam0yx@spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/hsd53j8z73cghzmy?autoReconnect=true
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 spring.datasource.username=gwmyi3gvp7y105sr
@@ -11,6 +11,8 @@ spring.datasource.password=wzpw5l8jbwxam0yx
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-multipart.enabled=true
+spring.servlet.multipart.enabled=true
+
+spring.datasource.max-lifetime=600000
 
 server.port=${PORT:8080}
