--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-#spring.datasource.url=jdbc:postgresql://localhost:5432/lego-webshop-dev
-spring.datasource.url=jdbc:mysql://gwmyi3gvp7y105sr:wzpw5l8jbwxam0yx@spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/hsd53j8z73cghzmy?autoReconnect=true
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-spring.datasource.username=gwmyi3gvp7y105sr
-spring.datasource.password=wzpw5l8jbwxam0yx
+spring.datasource.url=jdbc:postgresql://localhost:5432/lego-webshop-dev
+# spring.datasource.url=jdbc:mysql://gwmyi3gvp7y105sr:wzpw5l8jbwxam0yx@spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/hsd53j8z73cghzmy?autoReconnect=true
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+# spring.datasource.username=gwmyi3gvp7y105sr
+# spring.datasource.password=wzpw5l8jbwxam0yx
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
